initial search results page updates (#38)
* changed vendor ignore path
* initial search results page layout/css updates
* disabled scss lint rule
* created home.php file
- created new content templates, updated search.php
- created homepage featured area styles
- updated `.page-title` styles
* updated footer
* updated site colors
* added `.button` class to `button` styles
* added line-height to font mixins
* removed margins from h1-6
* copied breakpoint mixins from #44
* made date plain text instead of link
* fixed responsive spacing for main site container
* responsive styles for search results page

--- a/due-processed/sass/abstracts/mixins/_mixins.scss
+++ b/due-processed/sass/abstracts/mixins/_mixins.scss
@@ -15,4 +15,7 @@
 	width: calc(100% - (2 * 60px));
 	max-width: 1440px;
 	margin: 0 auto;
+	@include breakpoint-below(tablet-portrait) {
+		width: calc(100% - (2 * 20px));
+	}
 }
