--- a/due-processed/sass/abstracts/_abstracts.scss
+++ b/due-processed/sass/abstracts/_abstracts.scss
@@ -2,4 +2,5 @@
 @import "variables/typography";
 @import "variables/structure";
 @import "variables/columns";
+@import "mixins/breakpoints";
 @import "mixins/mixins";
