--- a/due-processed/woocommerce.css
+++ b/due-processed/woocommerce.css
@@ -38,6 +38,8 @@ WooCommerce styles override
 	font-display: swap;
 }
 
+/* stylelint-disable function-name-case */
+
 /**
  * Shop tables
  */
@@ -305,7 +307,7 @@ ul.products li.product .button {
 	top: 0;
 	position: absolute;
 	left: 0;
-	color: #007db3;
+	color: #005b83;
 }
 
 p.stars a {
@@ -340,13 +342,13 @@ p.stars a:hover ~ a::before {
 
 p.stars:hover a::before {
 	content: "\53";
-	color: #007db3;
+	color: #005b83;
 	opacity: 1;
 }
 
 p.stars.selected a.active::before {
 	content: "\53";
-	color: #007db3;
+	color: #005b83;
 	opacity: 1;
 }
 
@@ -358,7 +360,7 @@ p.stars.selected a.active ~ a::before {
 
 p.stars.selected a:not(.active)::before {
 	content: "\53";
-	color: #007db3;
+	color: #005b83;
 	opacity: 1;
 }
 
@@ -504,7 +506,7 @@ p.no-comments {
 	height: 1em;
 	cursor: ew-resize;
 	outline: none;
-	background: #007db3;
+	background: #005b83;
 	box-sizing: border-box;
 	margin-top: -0.25em;
 	opacity: 1;
@@ -522,7 +524,7 @@ p.no-comments {
 	z-index: 1;
 	display: block;
 	border: 0;
-	background: #007db3;
+	background: #005b83;
 }
 
 .widget_price_filter .price_slider_wrapper .ui-widget-content {
