--- a/due-processed/sass/abstracts/variables/_colors.scss
+++ b/due-processed/sass/abstracts/variables/_colors.scss
@@ -6,6 +6,7 @@ $__INTERNAL_USE_ONLY_COLOR_DARK_GREY__: #5f5f5f;
 $__INTERNAL_USE_ONLY_COLOR_PRIMARY_GREY__: #151515;
 $__INTERNAL_USE_ONLY_COLOR_SECONDARY_BLUE__: #e6f4f9;
 $__INTERNAL_USE_ONLY_COLOR_PRIMARY_BLUE__: #007db3;
+$__INTERNAL_USE_ONLY_COLOR_TERTIARY_BLUE__: #e3eff4;
 
 $color__background-body: $__INTERNAL_USE_ONLY_COLOR_WHITE__;
 $color__background-secondary: $__INTERNAL_USE_ONLY_COLOR_LIGHT_GREY__;
@@ -28,3 +29,4 @@ $color__border-input: $__INTERNAL_USE_ONLY_COLOR_MEDIUM_GREY__;
 $color__border-input-focus: $__INTERNAL_USE_ONLY_COLOR_PRIMARY_GREY__;
 $color__border-abbr: $__INTERNAL_USE_ONLY_COLOR_DARK_GREY__;
 $color__border: $__INTERNAL_USE_ONLY_COLOR_MEDIUM_GREY__;
+$color__custom-paragraph: $__INTERNAL_USE_ONLY_COLOR_TERTIARY_BLUE__;
