--- a/wp-content/themes/due-processed/block-styles/custom-paragraph.css
+++ b/wp-content/themes/due-processed/block-styles/custom-paragraph.css
@@ -34,7 +34,7 @@
   width: 100vw;
   position: relative;
   left: calc(-50vw + 50%);
-  background-color: #007db3; }
+  background-color: #e3eff4; }
 
 .wp-block-due-processed-custom-paragraph p {
   width: 636px;
