add footnotes to theme, minor header/post updates (#44)
* add breakpoint mixins, reorg font mixins

* add footnotes styles and js

* add footnote block editor btn

* enqueue scripts and add funcs for footnotes

* update posts styles for footnotes

* update article metadata (post date, byline)

* add mobile header layout

* auto collapse generated files

* fix site main responsive styles

* add generated files

--- a/due-processed/sass/components/_components.scss
+++ b/due-processed/sass/components/_components.scss
@@ -15,9 +15,13 @@
 @import "content/posts-and-pages";
 @import "content/single-posts-and-pages";
 
-/* search page
+/* Search Page
 --------------------------------------------- */
 @import "content/search";
+
+/* Footnotes
+--------------------------------------------- */
+@import "footnotes/footnotes";
 
 /* Comments
 --------------------------------------------- */
