--- a/due-processed/sass/components/content/_single-posts-and-pages.scss
+++ b/due-processed/sass/components/content/_single-posts-and-pages.scss
@@ -2,9 +2,13 @@
 	.post,
 	.post-navigation {
 		display: grid;
-		grid-template-columns: 1fr 1fr 232px;
+		grid-template-columns: minmax(0, 640px) 232px;
 		margin: 0 auto;
-		width: 872px;
+		max-width: 872px;
+		@include breakpoint-below(tablet-portrait) {
+			grid-template-columns: 1fr;
+			max-width: none;
+		}
 	}
 	.post {
 		position: relative;
@@ -12,24 +16,25 @@
 
 	.post-thumbnail {
 		grid-row: 1;
-		grid-column: 1 / 4;
+		grid-column: 1 / 3;
+		margin-bottom: $spacing__large;
 	}
 
+	// TODO Change element classname
 	.entry-footer {
 		grid-row: 2;
-		grid-column: 1 / 4;
+		grid-column: 1 / 3;
 		text-align: center;
-		margin-top: $spacing__large;
 	}
 
 	.entry-header {
 		grid-row: 3;
-		grid-column: 1 / 4;
+		grid-column: 1 / 3;
 		text-align: center;
 	}
 
 	.entry-content {
 		grid-row: 4;
-		grid-column: 1 / 3;
+		grid-column: 1 / 2;
 	}
 }
