--- a/due-processed/sass/site/_site-main.scss
+++ b/due-processed/sass/site/_site-main.scss
@@ -1,11 +1,11 @@
 .site-main {
-	@include primary-page-width();
+	@include breakpoint-above(tablet-portrait) {
+		@include primary-page-width();
+		min-height: 560px;
+		margin-top: $spacing__x-large;
+		margin-bottom: $spacing__x-large;
+	}
+	margin: $spacing__small;
 	overflow: hidden; /* Resolves issue with <pre> elements forcing full width. */
 	position: relative;
-	min-height: 560px;
-	margin-top: $spacing__x-large;
-	margin-bottom: $spacing__x-large;
-	@include breakpoint-below(tablet-portrait) {
-		margin-top: 0;
-	}
 }
