--- a/wp-content/themes/due-processed/style.css
+++ b/wp-content/themes/due-processed/style.css
@@ -50,6 +50,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	- Alignments
 
 --------------------------------------------------------------*/
+/* stylelint-disable function-name-case */
 @font-face {
 	font-family: "Lora Regular";
 	src: url(./fonts/Lora-Regular.woff2) format("woff");
@@ -84,8 +85,6 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	font-style: italic;
 	font-display: swap;
 }
-
-/* stylelint-disable function-name-case */
 
 /*--------------------------------------------------------------
 # Generic
@@ -759,15 +758,22 @@ textarea {
 }
 
 .site-header-top {
-	width: calc(100% - (2 * 60px));
-	max-width: 1440px;
-	margin: 0 auto;
-	display: flex;
+	flex-direction: column;
 	height: 50px;
-	align-items: center;
-	justify-content: space-between;
+	margin: 0 20px;
+	display: flex;
 }
-@media (max-width: 768px) {
+@media (min-width: 569px) {
+	.site-header-top {
+		width: calc(100% - (2 * 60px));
+		max-width: 1440px;
+		margin: 0 auto;
+		justify-content: space-between;
+		flex-direction: row;
+		align-items: center;
+	}
+}
+@media (min-width: 569px) and (max-width: 768px) {
 	.site-header-top {
 		width: calc(100% - (2 * 20px));
 	}
@@ -798,25 +804,25 @@ textarea {
 ## Main
 --------------------------------------------------------------*/
 .site-main {
-	width: calc(100% - (2 * 60px));
-	max-width: 1440px;
-	margin: 0 auto;
+	margin: 20px;
 	overflow: hidden;
 
 	/* Resolves issue with <pre> elements forcing full width. */
 	position: relative;
-	min-height: 560px;
-	margin-top: 50px;
-	margin-bottom: 50px;
 }
-@media (max-width: 768px) {
+@media (min-width: 569px) {
 	.site-main {
-		width: calc(100% - (2 * 20px));
+		width: calc(100% - (2 * 60px));
+		max-width: 1440px;
+		margin: 0 auto;
+		min-height: 560px;
+		margin-top: 50px;
+		margin-bottom: 50px;
 	}
 }
-@media (max-width: 768px) {
+@media (min-width: 569px) and (max-width: 768px) {
 	.site-main {
-		margin-top: 0;
+		width: calc(100% - (2 * 20px));
 	}
 }
 
@@ -886,6 +892,7 @@ textarea {
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 	position: relative;
 	margin-right: 50px;
+	white-space: nowrap;
 }
 .main-navigation a {
 	display: block;
@@ -1007,12 +1014,25 @@ textarea {
 	margin: 0 0 1.5em;
 }
 
+.entry-footer,
+.entry-meta {
+	font-size: 1.6rem;
+	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
+}
+
 .single-post .post,
 .single-post .post-navigation {
 	display: grid;
-	grid-template-columns: 1fr 1fr 232px;
+	grid-template-columns: minmax(0, 640px) 232px;
 	margin: 0 auto;
-	width: 872px;
+	max-width: 872px;
+}
+@media (max-width: 768px) {
+	.single-post .post,
+	.single-post .post-navigation {
+		grid-template-columns: 1fr;
+		max-width: none;
+	}
 }
 
 .single-post .post {
@@ -1021,28 +1041,28 @@ textarea {
 
 .single-post .post-thumbnail {
 	grid-row: 1;
-	grid-column: 1 / 4;
+	grid-column: 1 / 3;
+	margin-bottom: 40px;
 }
 
 .single-post .entry-footer {
 	grid-row: 2;
-	grid-column: 1 / 4;
+	grid-column: 1 / 3;
 	text-align: center;
-	margin-top: 40px;
 }
 
 .single-post .entry-header {
 	grid-row: 3;
-	grid-column: 1 / 4;
+	grid-column: 1 / 3;
 	text-align: center;
 }
 
 .single-post .entry-content {
 	grid-row: 4;
-	grid-column: 1 / 3;
+	grid-column: 1 / 2;
 }
 
-/* search page
+/* Search Page
 --------------------------------------------- */
 .search-results-wrapper {
 	display: grid;
@@ -1078,6 +1098,84 @@ textarea {
 	.search-results-page-title {
 		text-align: left;
 	}
+}
+
+/* Footnotes
+--------------------------------------------- */
+
+/* Shared
+--------------------------------------------- */
+.footnote-wrapper {
+	font-size: 1.2rem;
+	font-family: "Lora Regular", georgia, "Times New Roman", times, serif;
+	line-height: 20px;
+}
+
+.footnote-anchor {
+	padding-left: 2px;
+	padding-right: 2px;
+}
+
+.footnote a {
+	text-decoration: none;
+}
+
+.footnote-note {
+	display: grid;
+	grid-template-columns: 15px 1fr;
+	cursor: pointer;
+}
+.footnote-note a {
+	overflow-wrap: break-word;
+}
+.footnote-hidden .footnote-note {
+	visibility: hidden;
+}
+
+.footnote-note-sep {
+	margin-left: 3px;
+	color: #ccc;
+}
+
+/* Stacked (Desktop + Tablet) Layout
+--------------------------------------------- */
+.footnote-stacked .footnote-note {
+	padding: 10px;
+	position: absolute;
+	right: 0;
+	width: 206px;
+	margin-right: 1px;
+}
+
+.footnote-stacked .footnote-note-content {
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 3;
+	overflow: hidden;
+}
+
+.footnote-stacked.footnote-open .footnote-note {
+	background: #fff;
+	box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.75);
+	z-index: 3;
+}
+
+.footnote-stacked.footnote-open .footnote-note-content {
+	display: block;
+	overflow: auto;
+}
+
+/* Inline (Mobile) Layout
+--------------------------------------------- */
+.footnote-inline .footnote-note {
+	display: none;
+	background: #e3eff4;
+	padding: 10px 50px 10px 20px;
+	margin: 10px 0;
+}
+
+.footnote-inline.footnote-open .footnote-note {
+	display: grid;
 }
 
 /* Comments
