--- a/due-processed/sass/editor.scss
+++ b/due-processed/sass/editor.scss
@@ -8,3 +8,8 @@
 # Footnotes Block
 --------------------------------------------------------------*/
 @import "editor/footnotes";
+
+/*--------------------------------------------------------------
+# Custom Paragraph Block
+--------------------------------------------------------------*/
+@import "editor/custom-paragraph";
