--- a/due-processed/sass/style.scss
+++ b/due-processed/sass/style.scss
@@ -107,3 +107,8 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /* Alignments
 --------------------------------------------- */
 @import "utilities/alignments";
+
+
+/* Custom paragraph block styles
+--------------------------------------------- */
+@import "editor/custom-paragraph";
