mobile styles, delete old css files

--- a/due-processed/sass/pages/_about.scss
+++ b/due-processed/sass/pages/_about.scss
@@ -1,19 +1,25 @@
-.page-id-7 {
-	.site-main {
-		margin: 0;
-		width: 100vw;
-	}
+.site-main-about {
+	margin: 0;
+	width: 100vw;
 
 	.about-container {
 		display: flex;
 		justify-content: center;
 		width: 100vw;
+		margin-top: $spacing__small;
 	}
 
 	h1,
 	h2 {
 		@include font-header($size: large);
 		text-align: center;
+	}
+
+	p {
+		@include breakpoint-below(tablet-portrait) {
+			margin-left: $spacing__small;
+			margin-right: $spacing__small;
+		}
 	}
 
 	.entry-content {
