--- a/due-processed/sass/components/masthead/_masthead.scss
+++ b/due-processed/sass/components/masthead/_masthead.scss
@@ -1,3 +1,5 @@
+$spacing__mobile-masthead-text: 11px;
+
 .masthead-header {
 	@include font-body($size: medium);
 	margin-bottom: $spacing__large;
@@ -7,6 +9,10 @@
 	display: flex;
 	justify-content: center;
 	margin-bottom: $spacing__small;
+	@include breakpoint-below(tablet-portrait) {
+		flex-direction: column;
+		align-items: flex-start;
+	}
 }
 
 .masthead-item {
@@ -19,14 +25,31 @@
 	min-height: 141px;
 	width: 141px;
 	height: 141px;
-	background-color: #ccc;
 	border-radius: 50%;
 	margin-bottom: $spacing__small;
+	@include breakpoint-below(tablet-portrait) {
+		width: 70px;
+		height: 70px;
+		min-width: 70px;
+		min-height: 70px;
+		display: inline-block;
+	}
+}
+
+.masthead-text {
+	@include breakpoint-below(tablet-portrait) {
+		display: inline-block;
+		vertical-align: top;
+		margin-top: $spacing__mobile-masthead-text;
+	}
 }
 
 .masthead-title {
 	@include font-label();
 	margin: 0 0 $spacing__x-small;
+	@include breakpoint-below(tablet-portrait) {
+		margin: 0;
+	}
 }
 
 .masthead-name {
