--- a/wp-content/themes/due-processed/style-rtl.css
+++ b/wp-content/themes/due-processed/style-rtl.css
@@ -850,26 +850,30 @@ textarea {
 /*--------------------------------------------------------------
 # Pages
 --------------------------------------------------------------*/
-.page-id-7 .site-main {
+.site-main-about {
 	margin: 0;
 	width: 100vw;
 }
-
-.page-id-7 .about-container {
+.site-main-about .about-container {
 	display: flex;
 	justify-content: center;
 	width: 100vw;
+	margin-top: 20px;
 }
-
-.page-id-7 h1,
-.page-id-7 h2 {
+.site-main-about h1,
+.site-main-about h2 {
 	font-size: 2.8rem;
 	font-family: "Lora Medium", georgia, "Times New Roman", times, serif;
 	line-height: 30px;
 	text-align: center;
 }
-
-.page-id-7 .entry-content {
+@media (max-width: 768px) {
+	.site-main-about p {
+		margin-right: 20px;
+		margin-left: 20px;
+	}
+}
+.site-main-about .entry-content {
 	max-width: 636px;
 }
 
@@ -1322,6 +1326,12 @@ textarea {
 	justify-content: center;
 	margin-bottom: 20px;
 }
+@media (max-width: 768px) {
+	.masthead {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+}
 
 .masthead-item {
 	padding: 0 30px;
@@ -1333,15 +1343,36 @@ textarea {
 	min-height: 141px;
 	width: 141px;
 	height: 141px;
-	background-color: #ccc;
 	border-radius: 50%;
 	margin-bottom: 20px;
+}
+@media (max-width: 768px) {
+	.masthead-image {
+		width: 70px;
+		height: 70px;
+		min-width: 70px;
+		min-height: 70px;
+		display: inline-block;
+	}
+}
+
+@media (max-width: 768px) {
+	.masthead-text {
+		display: inline-block;
+		vertical-align: top;
+		margin-top: 13px;
+	}
 }
 
 .masthead-title {
 	font-size: 1.6rem;
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 	margin: 0 0 10px;
+}
+@media (max-width: 768px) {
+	.masthead-title {
+		margin: 0;
+	}
 }
 
 .masthead-name {
