--- a/due-processed/sass/site/_site-footer.scss
+++ b/due-processed/sass/site/_site-footer.scss
@@ -4,7 +4,60 @@
 }
 
 .site-info {
-	@include primary-page-width();
-	padding-top: $spacing__large;
-	padding-bottom: $spacing__large;
+	@include secondary-page-width();
+	padding: $spacing__large 0;
+	display: flex;
+	flex-direction: row;
+	a {
+		color: $color__text-main;
+	}
+	@include breakpoint-below(tablet-portrait) {
+		flex-direction: column;
+	}
+}
+
+.site-info-left {
+	flex: 3;
+	@include breakpoint-below(tablet-portrait) {
+		border-bottom: 1px solid $color__border;
+	}
+}
+
+.site-info-right {
+	flex: 2;
+	@include breakpoint-below(tablet-portrait) {
+		margin-top: $spacing__small;
+		display: flex;
+		flex-direction: column;
+	}
+}
+
+.site-info-row {
+	margin-bottom: $spacing__x-small;
+	@include breakpoint-below(tablet-portrait) {
+		margin-bottom: $spacing__small;
+	}
+}
+
+.site-info-label {
+	@include font-label();
+}
+
+.sign-up-title {
+	font-weight: 400;
+}
+
+.copyright-desktop {
+	@include breakpoint-below(tablet-portrait) {
+		display: none;
+	}
+}
+
+.copyright-mobile {
+	display: none;
+	@include breakpoint-below(tablet-portrait) {
+		display: inline;
+		padding-top: $spacing__small;
+		border-top: 1px solid $color__border;
+	}
 }
