--- a/due-processed/style-rtl.css
+++ b/due-processed/style-rtl.css
@@ -836,14 +836,78 @@ textarea {
 
 .site-info {
 	width: calc(100% - (2 * 60px));
-	max-width: 1440px;
+	max-width: 1094px;
 	margin: 0 auto;
-	padding-top: 40px;
-	padding-bottom: 40px;
+	padding: 40px 0;
+	display: flex;
+	flex-direction: row;
 }
 @media (max-width: 768px) {
 	.site-info {
 		width: calc(100% - (2 * 20px));
+	}
+}
+.site-info a {
+	color: #151515;
+}
+@media (max-width: 768px) {
+	.site-info {
+		flex-direction: column;
+	}
+}
+
+.site-info-left {
+	flex: 3;
+}
+@media (max-width: 768px) {
+	.site-info-left {
+		border-bottom: 1px solid #ccc;
+	}
+}
+
+.site-info-right {
+	flex: 2;
+}
+@media (max-width: 768px) {
+	.site-info-right {
+		margin-top: 20px;
+		display: flex;
+		flex-direction: column;
+	}
+}
+
+.site-info-row {
+	margin-bottom: 10px;
+}
+@media (max-width: 768px) {
+	.site-info-row {
+		margin-bottom: 20px;
+	}
+}
+
+.site-info-label {
+	font-size: 1.6rem;
+	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
+}
+
+.sign-up-title {
+	font-weight: 400;
+}
+
+@media (max-width: 768px) {
+	.copyright-desktop {
+		display: none;
+	}
+}
+
+.copyright-mobile {
+	display: none;
+}
+@media (max-width: 768px) {
+	.copyright-mobile {
+		display: inline;
+		padding-top: 20px;
+		border-top: 1px solid #ccc;
 	}
 }
 
