--- a/due-processed/style.css
+++ b/due-processed/style.css
@@ -19,7 +19,6 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
-
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
@@ -45,6 +44,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	- Galleries
 # plugins
 	- Jetpack infinite scroll
+	- Frontend Uploader
 # Utilities
 	- Accessibility
 	- Alignments
@@ -89,15 +89,11 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*--------------------------------------------------------------
 # Generic
 --------------------------------------------------------------*/
-
 /* Normalize
 --------------------------------------------- */
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-
 /* Document
 	 ========================================================================== */
-
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
@@ -109,7 +105,6 @@ html {
 
 /* Sections
 	 ========================================================================== */
-
 /**
  * Remove the margin in all browsers.
  */
@@ -135,7 +130,6 @@ h1 {
 
 /* Grouping content
 	 ========================================================================== */
-
 /**
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
@@ -157,7 +151,6 @@ pre {
 
 /* Text-level semantics
 	 ========================================================================== */
-
 /**
  * Remove the gray background on active links in IE 10.
  */
@@ -223,7 +216,6 @@ sup {
 
 /* Embedded content
 	 ========================================================================== */
-
 /**
  * Remove the border on images inside links in IE 10.
  */
@@ -233,7 +225,6 @@ img {
 
 /* Forms
 	 ========================================================================== */
-
 /**
  * 1. Change the font styles in all browsers.
  * 2. Remove the margin in Firefox and Safari.
@@ -379,7 +370,6 @@ textarea {
 
 /* Interactive
 	 ========================================================================== */
-
 /*
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
@@ -396,7 +386,6 @@ summary {
 
 /* Misc
 	 ========================================================================== */
-
 /**
  * Add the correct display in IE 10+.
  */
@@ -413,7 +402,6 @@ template {
 
 /* Box sizing
 --------------------------------------------- */
-
 /* Inherit box-sizing to more easily change it's value on a component level.
 @link http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
 *,
@@ -429,7 +417,6 @@ html {
 /*--------------------------------------------------------------
 # Base
 --------------------------------------------------------------*/
-
 /* Typography
 --------------------------------------------- */
 body,
@@ -612,22 +599,24 @@ a {
 	color: #005b83;
 	text-decoration: none;
 }
+
 a:visited {
 	color: #005b83;
 }
+
 a:hover {
 	text-decoration: underline;
 }
-a:hover,
-a:focus,
-a:active {
+
+a:hover, a:focus, a:active {
 	color: #005b83;
 }
+
 a:focus {
 	outline: thin dotted;
 }
-a:hover,
-a:active {
+
+a:hover, a:active {
 	outline: 0;
 }
 
@@ -649,6 +638,7 @@ input[type="submit"] {
 	padding-right: 20px;
 	cursor: pointer;
 }
+
 .button:hover,
 button:hover,
 input[type="button"]:hover,
@@ -657,8 +647,8 @@ input[type="submit"]:hover {
 	opacity: 0.85;
 	color: #fff;
 }
-.button:active,
-.button:focus,
+
+.button:active, .button:focus,
 button:active,
 button:focus,
 input[type="button"]:active,
@@ -669,6 +659,7 @@ input[type="submit"]:active,
 input[type="submit"]:focus {
 	opacity: 0.85;
 }
+
 .button:visited,
 button:visited,
 input[type="button"]:visited,
@@ -705,6 +696,7 @@ textarea {
 	padding-right: 10px;
 	height: 40px;
 }
+
 input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="url"]:focus,
@@ -737,7 +729,6 @@ textarea {
 /*--------------------------------------------------------------
 # Site
 --------------------------------------------------------------*/
-
 /*--------------------------------------------------------------
 ## Header
 --------------------------------------------------------------*/
@@ -747,13 +738,13 @@ textarea {
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
+
 .site-header a {
 	color: #151515;
 	text-decoration: none;
 }
-.site-header a:hover,
-.site-header a:focus,
-.site-header a:active {
+
+.site-header a:hover, .site-header a:focus, .site-header a:active {
 	color: #151515;
 }
 
@@ -763,6 +754,7 @@ textarea {
 	margin: 0 20px;
 	display: flex;
 }
+
 @media (min-width: 569px) {
 	.site-header-top {
 		width: calc(100% - (2 * 60px));
@@ -773,6 +765,7 @@ textarea {
 		align-items: center;
 	}
 }
+
 @media (min-width: 569px) and (max-width: 768px) {
 	.site-header-top {
 		width: calc(100% - (2 * 20px));
@@ -788,6 +781,7 @@ textarea {
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
+
 @media (max-width: 768px) {
 	.site-header-bottom {
 		width: calc(100% - (2 * 20px));
@@ -806,10 +800,10 @@ textarea {
 .site-main {
 	margin: 20px;
 	overflow: hidden;
-
 	/* Resolves issue with <pre> elements forcing full width. */
 	position: relative;
 }
+
 @media (min-width: 569px) {
 	.site-main {
 		width: calc(100% - (2 * 60px));
@@ -820,6 +814,7 @@ textarea {
 		margin-bottom: 50px;
 	}
 }
+
 @media (min-width: 569px) and (max-width: 768px) {
 	.site-main {
 		width: calc(100% - (2 * 20px));
@@ -841,6 +836,7 @@ textarea {
 	padding-top: 40px;
 	padding-bottom: 40px;
 }
+
 @media (max-width: 768px) {
 	.site-info {
 		width: calc(100% - (2 * 20px));
@@ -850,19 +846,20 @@ textarea {
 /*--------------------------------------------------------------
 # Components
 --------------------------------------------------------------*/
-
 /* Navigation
 --------------------------------------------- */
 .main-navigation {
 	display: block;
 	width: 100%;
 }
+
 .main-navigation ul {
 	display: none;
 	list-style: none;
 	margin: 0;
 	padding-left: 0;
 }
+
 .main-navigation ul ul {
 	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 	float: left;
@@ -871,22 +868,27 @@ textarea {
 	left: -999em;
 	z-index: 99999;
 }
+
 .main-navigation ul ul ul {
 	left: -999em;
 	top: 0;
 }
+
 .main-navigation ul ul li:hover > ul,
 .main-navigation ul ul li.focus > ul {
 	display: block;
 	left: auto;
 }
+
 .main-navigation ul ul a {
 	width: 200px;
 }
+
 .main-navigation ul li:hover > ul,
 .main-navigation ul li.focus > ul {
 	left: auto;
 }
+
 .main-navigation li {
 	font-size: 1.6rem;
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
@@ -894,6 +896,7 @@ textarea {
 	margin-right: 50px;
 	white-space: nowrap;
 }
+
 .main-navigation a {
 	display: block;
 	text-decoration: none;
@@ -914,10 +917,8 @@ textarea {
 	}
 }
 
-.site-main .comment-navigation,
-.site-main
-.posts-navigation,
-.site-main
+.site-main .comment-navigation, .site-main
+.posts-navigation, .site-main
 .post-navigation {
 	margin: 0 0 1.5em;
 }
@@ -1027,6 +1028,7 @@ textarea {
 	margin: 0 auto;
 	max-width: 872px;
 }
+
 @media (max-width: 768px) {
 	.single-post .post,
 	.single-post .post-navigation {
@@ -1071,6 +1073,7 @@ textarea {
 	max-width: 1094px;
 	margin: 0 auto;
 }
+
 @media (max-width: 768px) {
 	.search-results-wrapper {
 		grid-template-columns: 1fr;
@@ -1078,6 +1081,7 @@ textarea {
 		max-width: 375px;
 	}
 }
+
 @media (max-width: 768px) {
 	.search-results-wrapper > .post {
 		border-bottom: 1px solid #ccc;
@@ -1090,6 +1094,7 @@ textarea {
 		border-bottom: 0;
 	}
 }
+
 .search-results-wrapper > .post > .entry-summary > p {
 	margin: 5px 0;
 }
@@ -1102,7 +1107,6 @@ textarea {
 
 /* Footnotes
 --------------------------------------------- */
-
 /* Shared
 --------------------------------------------- */
 .footnote-wrapper {
@@ -1125,9 +1129,11 @@ textarea {
 	grid-template-columns: 15px 1fr;
 	cursor: pointer;
 }
+
 .footnote-note a {
 	overflow-wrap: break-word;
 }
+
 .footnote-hidden .footnote-note {
 	visibility: hidden;
 }
@@ -1193,6 +1199,7 @@ textarea {
 .widget {
 	margin: 0 0 1.5em;
 }
+
 .widget select {
 	max-width: 100%;
 }
@@ -1219,11 +1226,13 @@ textarea {
 	margin-bottom: 1.5em;
 	max-width: 100%;
 }
+
 .wp-caption img[class*="wp-image-"] {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
+
 .wp-caption .wp-caption-text {
 	margin: 0.8075em 0;
 }
@@ -1285,10 +1294,8 @@ textarea {
 /*--------------------------------------------------------------
 # Plugins
 --------------------------------------------------------------*/
-
 /* Jetpack infinite scroll
 --------------------------------------------- */
-
 /* Hide the Posts Navigation and the Footer when Infinite Scroll is in use. */
 .infinite-scroll .posts-navigation,
 .infinite-scroll.neverending .site-footer {
@@ -1300,13 +1307,19 @@ textarea {
 	display: block;
 }
 
+/* Frontend Uploader
+--------------------------------------------- */
+label.error {
+	color: red;
+	font-size: 12px;
+	margin-left: 50px;
+}
+
 /*--------------------------------------------------------------
 # Utilities
 --------------------------------------------------------------*/
-
 /* Accessibility
 --------------------------------------------- */
-
 /* Text meant only for screen readers. */
 .screen-reader-text {
 	border: 0;
@@ -1320,6 +1333,7 @@ textarea {
 	width: 1px;
 	word-wrap: normal !important;
 }
+
 .screen-reader-text:focus {
 	background-color: #f5f5f5;
 	border-radius: 3px;
@@ -1348,20 +1362,16 @@ textarea {
 /* Alignments
 --------------------------------------------- */
 .alignleft {
-
 	/*rtl:ignore*/
 	float: left;
-
 	/*rtl:ignore*/
 	margin-right: 1.5em;
 	margin-bottom: 1.5em;
 }
 
 .alignright {
-
 	/*rtl:ignore*/
 	float: right;
-
 	/*rtl:ignore*/
 	margin-left: 1.5em;
 	margin-bottom: 1.5em;
@@ -1374,3 +1384,5 @@ textarea {
 	margin-right: auto;
 	margin-bottom: 1.5em;
 }
+
+/*# sourceMappingURL=style.css.map */
