use wp_nav_menu in footer

--- a/due-processed/sass/site/_site-footer.scss
+++ b/due-processed/sass/site/_site-footer.scss
@@ -23,6 +23,15 @@
 	}
 }
 
+.site-info-menu {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	li {
+		margin-bottom: $spacing__x-small;
+	}
+}
+
 .site-info-right {
 	flex: 2;
 	@include breakpoint-below(tablet-portrait) {
