add mobile header styles and custom search form (#54)
* add icons--search, hamburger, logo

* add custom search form

* add global icon class

* use header named menu, add hamburger

* remove outline from buttons/links

* add overflow-hidden class for mobile header

* update button class, toggle body overflow

* update header style for mobile

* add generated files

--- a/due-processed/sass/base/elements/_buttons.scss
+++ b/due-processed/sass/base/elements/_buttons.scss
@@ -12,6 +12,7 @@ input[type="submit"] {
 	padding-left: 20px;
 	padding-right: 20px;
 	cursor: pointer;
+	outline: none;
 
 	&:hover {
 		opacity: 0.85;
