--- a/due-processed/sass/base/elements/_media.scss
+++ b/due-processed/sass/base/elements/_media.scss
@@ -13,3 +13,11 @@ img {
 figure {
 	margin: 1em 0; // Extra wide images within figure tags don't overflow the content area.
 }
+
+.icon {
+	max-width: 100%;
+	max-height: 100%;
+	width: auto;
+	height: auto;
+	fill: currentColor;
+}
