--- a/due-processed/sass/components/_components.scss
+++ b/due-processed/sass/components/_components.scss
@@ -2,6 +2,10 @@
 --------------------------------------------- */
 @import "navigation/navigation";
 
+/* Search Form
+--------------------------------------------- */
+@import "searchform/searchform";
+
 /* content components
 --------------------------------------------- */
 @import "content/meta";
@@ -46,4 +50,3 @@
 /* Masthead
 --------------------------------------------- */
 @import "masthead/masthead";
-
