--- a/due-processed/sass/site/_site-header.scss
+++ b/due-processed/sass/site/_site-header.scss
@@ -1,5 +1,5 @@
 .site-header {
-	border-bottom: 1px solid $color__border;
+	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
 	padding-top: $spacing__small;
 
 	a {
