--- a/due-processed/style.css
+++ b/due-processed/style.css
@@ -745,7 +745,7 @@ textarea {
 ## Header
 --------------------------------------------------------------*/
 .site-header {
-	border-bottom: 1px solid #ccc;
+	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
 	padding-top: 20px;
 }
 
@@ -976,6 +976,14 @@ textarea {
 	margin-right: 50px;
 }
 
+.main-navigation .menu > .menu-item > a {
+	border-bottom: 3px solid transparent;
+}
+
+.main-navigation .menu > .menu-item > a:hover, .main-navigation .menu > .menu-item > a.focus {
+	border-bottom: 3px solid #005b83;
+}
+
 .main-navigation .menu > .menu-item:hover > .sub-menu,
 .main-navigation .menu > .menu-item.focus > .sub-menu {
 	display: block;
@@ -984,14 +992,15 @@ textarea {
 @media (min-width: 769px) {
 	.main-navigation .menu > .menu-item > .sub-menu {
 		background-color: #fff;
-		box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-		border: 1px solid #ccc;
-		padding: 20px;
+		border-top: 1px solid #ccc;
+		box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+		padding: 20px 20px 10px 20px;
 		display: none;
 		position: absolute;
 		min-height: 200px;
 		width: 250px;
-		top: 60px;
+		top: 63px;
+		left: -20px;
 		z-index: 99999;
 	}
 }
@@ -1000,23 +1009,61 @@ textarea {
 	margin-left: 10px;
 }
 
-.main-navigation .menu > .menu-item > .sub-menu .menu-item {
+.main-navigation .menu > .menu-item > .sub-menu .menu-item a {
 	line-height: normal;
+	margin-bottom: 10px;
+}
+
+/* Small menu. */
+.main-navigation-icon,
+.main-navigation-icon.toggled {
+	width: 30px;
+	height: 30px;
+	padding: 0;
+	background: #fff;
+	color: #151515;
+}
+
+.main-navigation-icon:hover,
+.main-navigation-icon.toggled:hover {
+	opacity: 0.85;
+	color: #151515;
+}
+
+.main-navigation-icon > span,
+.main-navigation-icon.toggled > span {
+	display: inline-block;
+}
+
+.main-navigation-icon > span.main-navigation-close,
+.main-navigation-icon.toggled > span.main-navigation-close {
+	padding: 6px;
 }
 
 @media (min-width: 769px) {
-	.main-navigation-hamburger {
+	.main-navigation-icon {
 		display: none;
 	}
 }
 
 @media (max-width: 768px) {
-	.main-navigation-hamburger {
+	.main-navigation-icon {
 		display: block;
+	}
+	.main-navigation-icon .main-navigation-close {
+		display: none;
+	}
+	.main-navigation-icon .main-navigation-hamburger {
+		display: block;
+	}
+	.main-navigation-icon.toggled .main-navigation-close {
+		display: block;
+	}
+	.main-navigation-icon.toggled .main-navigation-hamburger {
+		display: none;
 	}
 }
 
-/* Small menu. */
 @media (max-width: 768px) {
 	.main-navigation {
 		display: none;
@@ -1033,12 +1080,22 @@ textarea {
 		top: 101px;
 	}
 	.main-navigation .menu-item {
-		padding: 10px 20px;
-		border-top: 1px solid #ccc;
+		padding: 0 20px;
 		margin: 0;
 	}
-	.main-navigation .sub-menu .menu-item {
-		border: none;
+	.main-navigation .menu-item > .sub-menu {
+		border-top: 1px solid #ccc;
+		margin-top: 10px;
+		padding-top: 30px;
+	}
+	.main-navigation .menu > .menu-item.menu-item-has-children > a {
+		display: none;
+	}
+	.main-navigation .menu > .menu-item .menu-item {
+		padding: 0;
+	}
+	.main-navigation .menu > .menu-item > .sub-menu .sub-menu {
+		display: none;
 	}
 	.main-navigation.toggled {
 		display: block;
@@ -1046,21 +1103,6 @@ textarea {
 	.main-navigation.toggled .menu {
 		display: block;
 	}
-}
-
-.main-navigation-hamburger,
-.main-navigation-hamburger.toggled {
-	width: 30px;
-	height: 30px;
-	padding: 0;
-	background: #fff;
-	color: #151515;
-}
-
-.main-navigation-hamburger:hover,
-.main-navigation-hamburger.toggled:hover {
-	opacity: 0.85;
-	color: #151515;
 }
 
 /* Other Navigation (Comments, Posts, Etc.)
